--- a/sample.html
+++ b/sample.html
@@ -23,7 +23,7 @@
 					
 					
                         <div id="calendar"></div>
-                        <div "id=calendarShamsi"></div>
+                        <div id="calendarShamsi"></div>
                 </div>
         	<script>
             		$(document).ready(function() {
